# cnijfilter-source-3.80

./: .gitignore  README.md  cnijfilter-common.spec
backend/: autogen.sh  configure.ac
backend/src/: Makefile.am  cnij_backend_common.c  cnij_usb.c
backendnet/: Makefile.am  configure.ac
backendnet/backend/: Makefile.am  cnijnet.c  cnijnetlm.c
backendnet/lmonitor/: Makefile.am  cnijnetchk.c  cnijnetprn.c
backendnet/lmonitor/common/: cpktypes.h
cngpij/: Makefile.am  autogen.sh  configure.ac
cngpij/cngpij/: Makefile.am  bjcups.c  bjcups.h  bjutil.c  getipc.c
cngpij/include/cncl/: cncludef.h
cngpij/include/misc/: bjipc.h
cngpijmnt/: autogen.sh  configure.ac
cngpijmnt/src/: Makefile.am  bjutil.c  getipc.c  main.c
cngpijmon/: Makefile.am  autogen.sh  cngpijmon.glade2p  configure.ac  configure.in
cngpijmon/cnijnpr/: autogen.sh  configure.ac
cngpijmon/cnijnpr/cnijnpr/: Makefile.am  bscc2sts.h  cnijnpr.c
cngpijmon/po/: cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  hu.po  id.po  it.po  ja.po  ko.po  nb.po  nl.po  pl.po  pt.po  ru.po  sv.po  th.po  tr.po  zh.po  zh_TW.po
cngpijmon/src/: Makefile.am  bjcupsmon_callbacks.c  bjcupsmon_common.h  bjcupsmon_cups.c  bjcupsmon_datastrptr.h  bjcupsmon_draw.c  bjcupsmon_main.c  bjcupsmon_msgidset.c  bjcupsmon_transsts.c  bjcupsmon_ui.c  bjcupsmon_ui.h
cnijfilter/: autogen.sh  configure.ac
cnijfilter/include/cncl/: cncl.h
cnijfilter/include/misc/: Makefile.am  psize.h
cnijfilter/src/: Makefile.am  bjferror.c  bjferror.h  bjfilter.c  bjfimage.c  bjflist.c  bjfoption.c  bjfoption.h  bjfpath.h  bjfpos.c  bjfpos.h  bjfrcaccess.c  bjfversion.h  bjipc.h  getipc.c
lgmon/: autogen.sh  configure.ac  configure.in
lgmon/include/cncl/: cncldef.h
lgmon/src/: 550ifunc.c  550itbl.c  560ifunc.c  560itbl.c  850ifunc.c  850itbl.c  860ifunc.c  860itbl.c  950ifunc.c  990ifunc.c  Makefile.am  bscc2sts.c  commonfunc.c  ip1000func.c  ip100func.c  ip100tbl.c  ip2200func.c  ip2200tbl.c  ip2500func.c  ip2500tbl.c  ip3100func.c  ip3100tbl.c  ip4100func.c  ip4100tbl.c  ip4200func.c  ip4200tbl.c  ip6600dfunc.c  ip6600dtbl.c  ip7500func.c  ip7500tbl.c  ip8600func.c  ip90func.c  langmon.c  lm_status.c  lm_sub.c  lmsmsock.h  mg4100func.c  mg4100tbl.c  mg5400func.c  mg5400tbl.c  (+23 more)
libs/: Makefile.am  autogen.sh  configure.ac
libs/buftool/: buflist.c  buflist.h  buftool.c  buftool.h
maintenance/: Makefile.am  autogen.sh  configure.ac
maintenance/include/cncl/: cncl2def.h  cncludef.h
maintenance/include/misc/: mntipc.h
maintenance/src/: Makefile.am  comdb.c  globals.h  ipcproc.c  keytext.c  main.c  util_cleaning.c  util_cmd.h  util_cmdlist.c  util_com.c  util_funclist.h  util_msi.h  util_nozzlecheck.c  util_parse_dialogstr.c  util_parse_flow.c  util_parse_function.c  util_regi.c  util_setconfig.c
ppd/: autogen.sh  canone510.ppd  canonip7200.ppd  canonmg2200.ppd  canonmg3200.ppd  canonmg4200.ppd  canonmg5400.ppd  canonmg6300.ppd  canonmp230.ppd  configure.ac
pstocanonij/: Makefile.am  autogen.sh  configure.ac
pstocanonij/filter/: Makefile.am  pstocanonij.c
scripts/install_deb/: install.sh
scripts/install_rpm/: install.sh
